[gd_scene load_steps=29 format=4 uid="uid://b311iowaksq5g"]

[ext_resource type="PackedScene" uid="uid://bi40akbu0hcyl" path="res://player/player.tscn" id="1_xhwim"]
[ext_resource type="Texture2D" uid="uid://cl7rq0wh0fviv" path="res://textures/prototype_materials/Orange/texture_01.png" id="2_vnv7o"]
[ext_resource type="Texture2D" uid="uid://dlwvdwdq08fpw" path="res://textures/prototype_materials/Purple/texture_01.png" id="3_l2bkr"]
[ext_resource type="Script" uid="uid://c6f4vs5pcsh1v" path="res://levels/wave_handler.gd" id="5_vnv7o"]
[ext_resource type="Script" uid="uid://xd531u081wyx" path="res://levels/collectible_spawner.gd" id="6_gjl0y"]
[ext_resource type="PackedScene" uid="uid://vkj15iayrnau" path="res://enemies/basic_enemy/basic_enemy.tscn" id="6_rtcij"]
[ext_resource type="PackedScene" uid="uid://bo07g2k1wcqxk" path="res://common/collectible_block/collectible_block.tscn" id="7_d5x7l"]
[ext_resource type="PackedScene" uid="uid://cgwc0hxoneo7e" path="res://enemies/shooting_enemy/shooting_enemy.tscn" id="7_ukwr8"]
[ext_resource type="Script" uid="uid://dp4tgomuhuj1y" path="res://addons/modular-settings-menu/scripts/settings-handler-scripts/world_env_settings_handler.gd" id="7_vnv7o"]
[ext_resource type="Script" uid="uid://d3o6fca0xbd4g" path="res://common/resources/wave.gd" id="8_ukwr8"]

[sub_resource type="ProceduralSkyMaterial" id="ProceduralSkyMaterial_wxewf"]

[sub_resource type="Sky" id="Sky_hlfcq"]
sky_material = SubResource("ProceduralSkyMaterial_wxewf")

[sub_resource type="Environment" id="Environment_7ua0a"]
background_mode = 2
sky = SubResource("Sky_hlfcq")
ambient_light_source = 3
ambient_light_color = Color(1, 1, 1, 1)
ambient_light_sky_contribution = 0.5
ambient_light_energy = 1.2
fog_mode = 1
fog_density = 1.0
fog_depth_curve = 0.148651

[sub_resource type="NavigationMesh" id="NavigationMesh_gjl0y"]
vertices = PackedVector3Array(-31.5, 0.442265, -5.75, -7.25, 0.442265, -5.5, -7.25, 0.442265, -7, -5.5, 0.442265, -7.25, -5.75, 0.442265, -31.5, -31.5, 0.442265, -31.5, -2.5, 0.442265, -7.25, -2.25, 0.442265, -31.5, -1, 0.442265, -7.25, -0.75, 0.442265, -5.5, 31.5, 0.442265, -5.75, 31.5, 0.442265, -31.5, -6.25, 10.4423, -6.25, -6.25, 10.4423, -1.75, -1.75, 10.4423, -1.75, -1.75, 10.4423, -6.25, -31.5, 0.442265, -2.25, -7.25, 0.442265, -2.5, -5.75, 0.442265, -5.75, -5.75, 0.442265, -2, -2, 0.442265, -2, -2, 0.442265, -5.75, -0.75, 0.442265, -2.5, 31.5, 0.442265, -2.25, -7.25, 0.442265, -1, -5.5, 0.442265, -0.75, -31.5, 0.442265, 31.5, -5.75, 0.442265, 31.5, -1, 0.442265, -0.75, -2.5, 0.442265, -0.75, -2.25, 0.442265, 31.5, 31.5, 0.442265, 31.5)
polygons = [PackedInt32Array(2, 1, 0), PackedInt32Array(3, 2, 4), PackedInt32Array(4, 2, 5), PackedInt32Array(5, 2, 0), PackedInt32Array(3, 4, 6), PackedInt32Array(6, 4, 7), PackedInt32Array(8, 6, 7), PackedInt32Array(8, 7, 9), PackedInt32Array(9, 7, 10), PackedInt32Array(10, 7, 11), PackedInt32Array(15, 14, 12), PackedInt32Array(12, 14, 13), PackedInt32Array(17, 16, 1), PackedInt32Array(1, 16, 0), PackedInt32Array(21, 20, 18), PackedInt32Array(18, 20, 19), PackedInt32Array(9, 10, 22), PackedInt32Array(22, 10, 23), PackedInt32Array(16, 17, 24), PackedInt32Array(24, 25, 16), PackedInt32Array(16, 25, 27), PackedInt32Array(16, 27, 26), PackedInt32Array(30, 29, 28), PackedInt32Array(22, 23, 28), PackedInt32Array(28, 23, 31), PackedInt32Array(28, 31, 30), PackedInt32Array(25, 29, 27), PackedInt32Array(27, 29, 30)]
agent_height = 2.0

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_d5x7l"]
albedo_texture = ExtResource("2_vnv7o")
uv1_scale = Vector3(64, 64, 1)

[sub_resource type="PlaneMesh" id="PlaneMesh_gjl0y"]
size = Vector2(64, 64)

[sub_resource type="ConvexPolygonShape3D" id="ConvexPolygonShape3D_gjl0y"]
points = PackedVector3Array(-32, 0, -32, -32, 0, 32, 32, 0, -32, 32, 0, 32)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_t1gbn"]
albedo_texture = ExtResource("3_l2bkr")
uv1_scale = Vector3(5, 5, 10)

[sub_resource type="BoxMesh" id="BoxMesh_leal2"]
size = Vector3(5, 10, 5)

[sub_resource type="ConcavePolygonShape3D" id="ConcavePolygonShape3D_gjl0y"]
data = PackedVector3Array(-2.5, 5, 2.5, 2.5, 5, 2.5, -2.5, -5, 2.5, 2.5, 5, 2.5, 2.5, -5, 2.5, -2.5, -5, 2.5, 2.5, 5, -2.5, -2.5, 5, -2.5, 2.5, -5, -2.5, -2.5, 5, -2.5, -2.5, -5, -2.5, 2.5, -5, -2.5, 2.5, 5, 2.5, 2.5, 5, -2.5, 2.5, -5, 2.5, 2.5, 5, -2.5, 2.5, -5, -2.5, 2.5, -5, 2.5, -2.5, 5, -2.5, -2.5, 5, 2.5, -2.5, -5, -2.5, -2.5, 5, 2.5, -2.5, -5, 2.5, -2.5, -5, -2.5, 2.5, 5, 2.5, -2.5, 5, 2.5, 2.5, 5, -2.5, -2.5, 5, 2.5, -2.5, 5, -2.5, 2.5, 5, -2.5, -2.5, -5, 2.5, 2.5, -5, 2.5, -2.5, -5, -2.5, 2.5, -5, 2.5, 2.5, -5, -2.5, -2.5, -5, -2.5)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_gjl0y"]
albedo_color = Color(0, 0, 0, 1)
distance_fade_mode = 2
distance_fade_min_distance = 1.0
distance_fade_max_distance = 1.0

[sub_resource type="ArrayMesh" id="ArrayMesh_gjl0y"]
_surfaces = [{
"aabb": AABB(-2.55773, -5.05773, -2.55773, 5.11547, 10.1155, 5.11547),
"attribute_data": PackedByteArray("AAAAAAAAAACrqio/AAAAAKuqqj4AAAAAAACAPwAAAAAAAAAAAAAAP6uqKj8AAAA/q6qqPgAAAD8AAIA/AAAAP6uqqj4AAAAAAAAAAAAAAD+rqio/AAAAAKuqqj4AAAA/q6qqPgAAAD8AAAAAAACAP6uqKj8AAAA/q6qqPgAAgD+rqqo+AAAAP6uqKj8AAAA/q6oqPwAAAD8AAIA/AAAAP6uqqj4AAIA/q6oqPwAAgD+rqio/AACAPwAAgD8AAIA/"),
"format": 34359742487,
"index_count": 36,
"index_data": PackedByteArray("AAAEAAIAAgAEAAYAAQAFAAMAAwAFAAcACAAMAAoACgAMAA4ACQANAAsACwANAA8AEAAUABIAEgAUABYAEQAVABMAEwAVABcA"),
"material": SubResource("StandardMaterial3D_gjl0y"),
"primitive": 3,
"uv_scale": Vector4(0, 0, 0, 0),
"vertex_count": 24,
"vertex_data": PackedByteArray("7rEjwPfYoUDusSNA7rEjQPfYoUDusSPA7rEjQPfYoUDusSNA7rEjwPfYoUDusSPA7rEjwPfYocDusSNA7rEjQPfYocDusSPA7rEjQPfYocDusSNA7rEjwPfYocDusSPA7rEjQPfYoUDusSNA7rEjwPfYoUDusSPA7rEjQPfYoUDusSPA7rEjwPfYoUDusSNA7rEjQPfYocDusSNA7rEjwPfYocDusSPA7rEjQPfYocDusSPA7rEjwPfYocDusSNA7rEjQPfYoUDusSNA7rEjwPfYocDusSNA7rEjwPfYoUDusSNA7rEjQPfYocDusSNA7rEjQPfYoUDusSPA7rEjwPfYocDusSPA7rEjwPfYoUDusSPA7rEjQPfYocDusSPA/3//f////7//////AAD/v/9//3////+//////wAA/7//f/9/////v/////8AAP+//3//f////7//////AAD/v///AID/////AAAAgP9//7///wCA/////wAAAID/f/+///8AgP////8AAACA/3//v///AID/////AAAAgP9//78AgP//AAD/vwCAAAD///+/AID//wAA/78AgAAA////vwCA//8AAP+/AIAAAP///78AgP//AAD/vwCAAAD///+/")
}]

[sub_resource type="Resource" id="Resource_pb8y7"]
script = ExtResource("8_ukwr8")
enemies = Array[PackedScene]([ExtResource("6_rtcij")])
time_between_enemy_sec = 2.0
metadata/_custom_type_script = ExtResource("8_ukwr8")

[sub_resource type="Resource" id="Resource_ukwr8"]
script = ExtResource("8_ukwr8")
enemies = Array[PackedScene]([ExtResource("7_ukwr8")])
time_between_enemy_sec = 2.0
metadata/_custom_type_script = ExtResource("8_ukwr8")

[sub_resource type="Resource" id="Resource_hy0rb"]
script = ExtResource("8_ukwr8")
enemies = Array[PackedScene]([ExtResource("6_rtcij"), ExtResource("6_rtcij")])
time_between_enemy_sec = 2.0
metadata/_custom_type_script = ExtResource("8_ukwr8")

[sub_resource type="Resource" id="Resource_mxp4k"]
script = ExtResource("8_ukwr8")
enemies = Array[PackedScene]([ExtResource("6_rtcij"), ExtResource("7_ukwr8")])
time_between_enemy_sec = 2.0
metadata/_custom_type_script = ExtResource("8_ukwr8")

[sub_resource type="Resource" id="Resource_d7v53"]
script = ExtResource("8_ukwr8")
enemies = Array[PackedScene]([ExtResource("7_ukwr8"), ExtResource("7_ukwr8")])
time_between_enemy_sec = 2.0
metadata/_custom_type_script = ExtResource("8_ukwr8")

[sub_resource type="Resource" id="Resource_0qmeg"]
script = ExtResource("8_ukwr8")
enemies = Array[PackedScene]([ExtResource("6_rtcij"), ExtResource("7_ukwr8"), ExtResource("6_rtcij"), ExtResource("7_ukwr8"), ExtResource("6_rtcij")])
time_between_enemy_sec = 2.0
metadata/_custom_type_script = ExtResource("8_ukwr8")

[node name="Level" type="Node3D"]

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_7ua0a")

[node name="Player" parent="." groups=["player"] instance=ExtResource("1_xhwim")]

[node name="NavMesh" type="NavigationRegion3D" parent="."]
unique_name_in_owner = true
navigation_mesh = SubResource("NavigationMesh_gjl0y")

[node name="FloorPlane" type="MeshInstance3D" parent="NavMesh"]
material_override = SubResource("StandardMaterial3D_d5x7l")
mesh = SubResource("PlaneMesh_gjl0y")
skeleton = NodePath("../..")
metadata/_edit_group_ = true

[node name="StaticBody3D" type="StaticBody3D" parent="NavMesh/FloorPlane"]

[node name="CollisionShape3D" type="CollisionShape3D" parent="NavMesh/FloorPlane/StaticBody3D"]
shape = SubResource("ConvexPolygonShape3D_gjl0y")

[node name="GodotPlushPedestal" type="MeshInstance3D" parent="NavMesh"]
transform = Transform3D(-4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, -4, 5, -4)
material_override = SubResource("StandardMaterial3D_t1gbn")
mesh = SubResource("BoxMesh_leal2")
skeleton = NodePath("../..")
metadata/_edit_group_ = true

[node name="StaticBody3D" type="StaticBody3D" parent="NavMesh/GodotPlushPedestal"]

[node name="CollisionShape3D" type="CollisionShape3D" parent="NavMesh/GodotPlushPedestal/StaticBody3D"]
shape = SubResource("ConcavePolygonShape3D_gjl0y")

[node name="MeshInstance3D" type="MeshInstance3D" parent="NavMesh/GodotPlushPedestal"]
mesh = SubResource("ArrayMesh_gjl0y")

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(-0.551434, -0.724711, 0.413176, -0.219846, 0.604023, 0.766044, -0.804728, 0.331588, -0.492404, 0, 0, 0)
light_energy = 1.5
shadow_enabled = true

[node name="EvnSettingsHandler" type="Node" parent="." node_paths=PackedStringArray("WorldEnvRef")]
script = ExtResource("7_vnv7o")
WorldEnvRef = NodePath("../WorldEnvironment")

[node name="WaveHandler" type="Node" parent="." groups=["wave_handler"]]
unique_name_in_owner = true
script = ExtResource("5_vnv7o")
waves = Array[ExtResource("8_ukwr8")]([SubResource("Resource_pb8y7"), SubResource("Resource_ukwr8"), SubResource("Resource_hy0rb"), SubResource("Resource_mxp4k"), SubResource("Resource_d7v53"), SubResource("Resource_0qmeg")])

[node name="WaveTimer" type="Timer" parent="WaveHandler"]
unique_name_in_owner = true
wait_time = 5.0
one_shot = true

[node name="WaveStallTimer" type="Timer" parent="WaveHandler"]
unique_name_in_owner = true
wait_time = 15.0
one_shot = true

[node name="CollectibleSpawner" type="Node" parent="."]
script = ExtResource("6_gjl0y")
collectible_scene = ExtResource("7_d5x7l")

[node name="CollectibleSpawnTimer" type="Timer" parent="CollectibleSpawner"]
wait_time = 10.0
autostart = true

[connection signal="timeout" from="WaveHandler/WaveTimer" to="WaveHandler" method="_spawn_next_enemy"]
[connection signal="timeout" from="WaveHandler/WaveStallTimer" to="WaveHandler" method="change_wave"]
[connection signal="timeout" from="CollectibleSpawner/CollectibleSpawnTimer" to="CollectibleSpawner" method="_spawn_collectible"]
